a) local.yml hs internal values, fixed them     b) static final attributes made UPPER_SNAKE format     c) Removed logback since dw has it already     d) Removed the unnecessary AfterEach     e) Fixed exception handling for junit5     f) Moved build-check.yml java version to 17 from 11